--- a/drivers/gpu/drm/bridge/Kconfig
+++ b/drivers/gpu/drm/bridge/Kconfig
@@ -1,7 +1,7 @@
 config DRM_PTN3460
 	tristate "PTN3460 DP/LVDS bridge"
 	depends on DRM
-	depends on OF && I2C
+	depends on OF
 	select DRM_KMS_HELPER
 	select DRM_PANEL
 	---help---
